--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/core-2.jar"/>
+	<classpathentry kind="lib" path="Lib/core-2.jar"/>
+	<classpathentry kind="lib" path="Lib/controlP5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
