--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15"/>
-	<classpathentry kind="lib" path="Lib/core-2.jar"/>
-	<classpathentry kind="lib" path="Lib/controlP5.jar"/>
+	<classpathentry kind="lib" path="lib/controlP5.jar"/>
+	<classpathentry kind="lib" path="lib/core-2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
